---
source: compiler-core/src/fsharp/tests/lists.rs
expression: "\nfn go(xs) {\n  case xs {\n    [] -> 0\n    [_] -> 1\n    [_, _] -> 2\n    _ -> 9999\n  }\n}\n"
---
module rec my.``mod``
let private go (xs: list<'u11>) = begin
    match xs with
    | [] ->
        0L
    | [_] ->
        1L
    | [_; _] ->
        2L
    | _ ->
        9999L
end
